<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- prefence keys, no translation needed -->
    <string name="pref_commands_mode">pref_commands_mode</string>
    <string name="pref_checksum_mode">pref_checksum_mode</string>
    <string name="pref_commands_ending">pref_commands_ending</string>
    <string name="pref_answer_ending">pref_answer_ending</string>
    <string name="pref_log_timing">pref_log_timing</string>
    <string name="pref_log_direction">pref_log_direction</string>
    <string name="pref_need_clean">pref_need_clean</string>
    <!-- prefence keys, no translation needed -->

    <string name="app_name">Bluetooth terminal</string>

    <string name="msg_not_connected">not connected</string>
    <string name="msg_connecting">connecting…</string>
    <string name="msg_connected">connected</string>

    <string name="action_bluetooth">on/off</string>
    <string name="no_bt_support">Your device doesn\'t support bluetooth.</string>
    <string name="empty_device_name">&lt;New device&gt;</string>

    <string name="menu_send">Send log…</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear history</string>

    <string name="select_device">Select device</string>
    <string name="search_message">Search for devices…</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">Not found</string>
    <string name="command_hint">Enter command here</string>
    <string name="button_send">Send</string>

    <!-- Настройки -->
    <string name="log_settings_category">Command history:</string>

    <string name="log_time">Time</string>
    <string name="log_time_summary">Show time in log</string>
    <string name="log_direction">Direction</string>
    <string name="log_direction_summary">Show I/O direction in log</string>

    <string name="commands_mode">Input mode:</string>
    <string name="checksum_mode">Checksum</string>
    <string name="checksum_mode_summary">Add checksum to command</string>
    <string name="commands_mode_summary">Select input mode</string>
    <string name="commands_ending_summary">Select ending</string>

    <string name="answer_mode">Answer mode:</string>
    <string name="answer_ending_summary">Select answer ending</string>

    <string name="need_clean">Clear previous command</string>
    <string name="need_clean_summary">Cleanup command view after sending</string>
</resources>